test/negative/feature_int.java
public class feature_int {
  public feature_int() {}
  protected int x;
  protected int toobig = 2147483648;
}
